--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "1.0.0",
   "description": "A tiny Metroidvania.",
   "main": "index.js",
-  "dependencies": {},
   "devDependencies": {
-    "rollup": "^1.16.2",
+    "@rollup/plugin-replace": "^5.0.7",
+    "@rollup/plugin-terser": "^0.4.4",
+    "rollup": "^4.21.0",
     "rollup-plugin-glsl": "^1.3.0",
-    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-string": "^3.0.0",
-    "rollup-plugin-terser": "^5.0.0"
+    "serve": "^14.2.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c",
-    "watch": "rollup -c -w"
+    "watch": "rollup -c -w",
+    "start": "serve"
   },
   "repository": {
     "type": "git",
